# OculusGlfwSkeleton

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md
shaders/: basicplane.frag  basicplane.vert
src/OVRkill/: OVRkill.cpp  OVRkill.h
src/appskeleton/: AntOculusAppSkeleton.cpp  AntOculusAppSkeleton.h  AppSkeleton.cpp  AppSkeleton.h  OculusAppSkeleton.cpp  OculusAppSkeleton.h  Scene.cpp  Scene.h
src/main/: simple_glfw_main.cpp  simple_glfw_skeleton.cpp
src/skeleton/: simple_glfw_skeleton.cpp
src/utils/: MatrixMath.h  Timer.cpp  Timer.h
src/utils/GL/: ShaderFunctions.cpp
src/vectormath/: VectorMath.h  vector_make_helpers.h  vectortypes.h
tools/: copyDLLs.py  hardcode_shaders.py
